--- a/client/.env
+++ b/client/.env
@@ -2,6 +2,6 @@ VITE___API_URL = http://localhost:3000
 VITE___GOOGLE_BOOKS_API_KEY = AIzaSyBnMjm35eZFjQsHkORfjUdCv2HU8pWH9m4
 VITE___RECOMMENDER_API = http://localhost:8000
 
-VITE_API_URL = 18.156.158.53
+VITE_API_URL = https://web-app-for-readers-with-ai.onrender.com
 VITE_GOOGLE_BOOKS_API_KEY = AIzaSyBnMjm35eZFjQsHkORfjUdCv2HU8pWH9m4
 VITE_RECOMMENDER_API = http://localhost:8000
